PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 200?, PHP 5.3.0 Alpha 2
- Fixed bug #45696 (Not all DateTime methods allow method chaining). (Derick)
- Fixed bug #45545 (DateInterval has a limitation of 4 chars for ISO
  durations). (Derick)
- Fixed bug #44100 (Inconsistent handling of static array declarations with
  duplicate keys). (Dmitry)
- Fixed bug #43008 (php://filter uris ignore url encoded filternames and can't 
  handle slashes). (Arnaud)

01 Aug 2008, PHP 5.3.0 Alpha 1
- Upgraded bundled PCRE to version 7.7. (Nuno)
- Upgraded bundled PDO sqlite to version 3.5.9. (Scott)

- Moved extensions to PECL (Pierre):
  . ext/fdf
  . ext/ncurses
  . ext/sybase (not maintained anymore, sybase_ct has to be used instead)

- Removed the experimental RPL (master/slave) functions from mysqli. (Andrey)
- Removed zend.ze1_compatibility_mode. (Dmitry)
- Deprecated ticks support. (Felipe)

- Changed PCRE, Reflection and SPL extensions to be always enabled. (Marcus)
- Changed md5() to use improved implementation. (Solar Designer, Dmitry)
- Changed HTTP stream wrapper to accept any code between and including
  200 to 399 as successful. (Mike, Noah Fontes)

- Improved PHP syntax and semantics:
  . Added lambda functions and closures. (Christian Seiler, Dmitry)
  . Added "jump label" operator (limited "goto"). (Dmitry, Sara)
  . Added NOWDOC syntax. (Gwynne Raskind, Stas, Dmitry)
  . Added HEREDOC syntax with double quotes. (Lars Strojny, Felipe)
  . Added support for using static HEREDOCs to initialize static variables and
    class members or constants. (Matt)
  . Improved syntax highlighting and consistency for variables in double-quoted
    strings and literal text in HEREDOCs and backticks. (Matt)
  . Added "?:" operator. (Marcus)
  . Added support for namespaces. (Dmitry, Stas, Gregory)
  . Added support for Late Static Binding. (Dmitry, Etienne Kneuss)